--- a/index.html
+++ b/index.html
@@ -32,12 +32,19 @@
       <section>
         <div id="title">
           <h1>Ouruo-server</h1>
-          <p>OurUO Ultima Online custom server based on RunUO 2.3 public source code.</p>
+          <p>Server custom di Ultima Online basato sul codice pubblicon di RunUO 2.3.</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/OurUO">OurUO</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></span>
         </div>
+        
+        <h3>Autori</h3>
+        <ul>
+        <li><a href="https://github.com/dev-riker" class="user-mention">@dev-riker</a></li>
+        <li><a href="https://github.com/devsebastien" class="user-mention">@devsebastien</a></li>
+        </ul>
 
+<!--
         <h3>Welcome to GitHub Pages.</h3>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
@@ -64,6 +71,7 @@ $ git checkout gh-pages
 <h3>Support or Contact</h3>
 
 <p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+-->
       </section>
 
     </div>
