--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <section>
         <div id="title">
           <h1>Ouruo-server</h1>
-          <p>Server custom di Ultima Online basato sul codice pubblicon di RunUO 2.3.</p>
+          <p>Server custom di Ultima Online basato sul codice pubblico di RunUO 2.3.</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/OurUO">OurUO</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></span>
