- Aggiunto paragrafetto di prova.

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></span>
         </div>
         
+        <h3>Come contribuire</h3>
+        <p>Contribuire al progetto &egrave; sufficiente scaricare una copia dei sorgenti tramite <emph>git</emph> e andare a cercare sul bug tracker un'issue alla propria portata che debba essere ancora risolta.</p>
+        
         <h3>Autori</h3>
         <ul>
         <li><a href="https://github.com/dev-riker" class="user-mention">@dev-riker</a></li>
