- Aggiunto paragrafetto di prova.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
         
         <h3>Come contribuire</h3>
-        <p>Contribuire al progetto &egrave; sufficiente scaricare una copia dei sorgenti tramite <emph>git</emph> e andare a cercare sul bug tracker un'issue alla propria portata che debba essere ancora risolta.</p>
+        <p>Per contribuire al progetto &egrave; sufficiente scaricare una copia dei sorgenti tramite <emph>git</emph> e andare a cercare sul bug tracker un'issue alla propria portata che debba essere ancora risolta.</p>
         
         <h3>Autori</h3>
         <ul>
